# team4_robotdesign3_2021

./: CMakeLists.txt  README.md  package.xml
action/: ActSignal.action  README.md
dae/: README.md
description/: README.md  table.world
description/model/: can_id0.dae  can_id1.dae  can_id2.dae  can_id3.dae  club.dae  dislike_id10.dae
description/model/AR_marker_picture/: README.md
description/models/ARmarker_id06/: model.config  model.sdf
description/models/ARmarker_id06/meshes/: ARmarker_id06.dae
description/models/can_id0/: model.config  model.sdf
description/models/can_id0/meshes/: can_id0.dae
description/models/can_id1/: model.config  model.sdf
description/models/can_id1/meshes/: can_id1.dae
description/models/can_id2/: model.config  model.sdf
description/models/can_id2/meshes/: can_id0.dae  can_id2.dae
description/models/can_id3/: model.config  model.sdf
description/models/can_id4/: model.config  model.sdf
description/models/club/: model.config  model.sdf
description/models/dislike_id10/: model.config  model.sdf
description/models/stand/: model.sdf
launch/: README.md  crane_x7_with_table.launch  run.launch  test.launch
scripts/: ARtest.py  README.md  action_client.py  action_server.py  cp_motion_process.py  emotions.py  img_process.py  manage.py  motion_process.py  test_client.py  test_img_process.py  test_motion_process.py
srdf/: README.md  crane_x7_planning.srdf  test.py
srv/: README.md  SetInt32.srv
stl/: club.stl
urdf/: club.urdf  table.world
urdf/model/: can.dae  can_id2.dae  club.dae  mark.dae
(+3 files in other folders)
