<?xml version="1.0"?>
<package format="2">
  <name>team4_robotdesign3_2021</name>
  <version>0.0.0</version>
  <description>The team4_robotdesign3_2021 package</description>

<!--team4 members-->
  <maintainer email="yusuke-yamasaki@todo.todo">yusuke-yamasaki</maintainer>
  <maintainer email="makoto-yoshigoe@todo.todo">makoto-yoshigoe</maintainer>

<!--crane_7_planning.srdfの改変元：crane_x7_moveit_config/config/crane_x7.srdf-->
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <author email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</author>

<!--table.worldの改変元：crane_x7_gazebo/worlds/table.world-->
<!--crane_x7_with_table.launchの改変元：crane_x7_gazebo/launch/crane_x7_with_table.launch-->
  <author email="macakasit@gmail.com">Shota Aoki</author>


  <license>NON-COMMERCIAL LICENCE AGREEMENT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
